force-app/main/default/objects/Lead/fields/Both_Address_Same__c.field-meta.xml
<CustomField>
    <fullName>Both_Address_Same__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Both Address Same</label>
    <type>Checkbox</type>
</CustomField>