force-app/main/default/objects/Lead/fields/Brochure_Send_Successfully__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Send_Successfully__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brochure Send Successfully</label>
    <type>Checkbox</type>
</CustomField>