force-app/main/default/objects/Lead/fields/Current_pence_per_KWH_electricity_rate__c.field-meta.xml
<CustomField>
    <fullName>Current_pence_per_KWH_electricity_rate__c</fullName>
    <label>Current pence per KWH electricity rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>