force-app/main/default/objects/Lead/fields/Custom_Email__c.field-meta.xml
<CustomField>
    <fullName>Custom_Email__c</fullName>
    <label>Custom Email</label>
    <type>Email</type>
</CustomField>