force-app/main/default/objects/Lead/fields/DNO_Name__c.field-meta.xml
<CustomField>
    <fullName>DNO_Name__c</fullName>
    <inlineHelpText>Distribution Network Operator</inlineHelpText>
    <label>DNO Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Grid</fullName>
            </value>
            <value>
                <fullName>Northern Powergrid</fullName>
            </value>
            <value>
                <fullName>Electricity Northwest</fullName>
            </value>
            <value>
                <fullName>Scottish Power Energy Networks</fullName>
            </value>
            <value>
                <fullName>Scottish and Southern Electricity Networks</fullName>
            </value>
            <value>
                <fullName>Independent DNO Operator</fullName>
            </value>
            <value>
                <fullName>Electricity North West.</fullName>
                <isActive>false</isActive>
                <label>Electricity North West.</label>
            </value>
            <value>
                <fullName>SP Energy Networks</fullName>
                <isActive>false</isActive>
                <label>SP Energy Networks</label>
            </value>
            <value>
                <fullName>SSEN</fullName>
                <isActive>false</isActive>
                <label>SSEN</label>
            </value>
            <value>
                <fullName>UK Power Networks</fullName>
                <isActive>false</isActive>
                <label>UK Power Networks</label>
            </value>
            <value>
                <fullName>Western Power Distribution</fullName>
                <isActive>false</isActive>
                <label>Western Power Distribution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>