force-app/main/default/objects/Lead/fields/Identity_Type__c.field-meta.xml
<CustomField>
    <fullName>Identity_Type__c</fullName>
    <label>Identity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar - Commercial</fullName>
            </value>
            <value>
                <fullName>Solar - Residential</fullName>
            </value>
            <value>
                <fullName>Battery Storage</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>EV Charging</fullName>
            </value>
            <value>
                <fullName>Commercial Lighting</fullName>
                <isActive>false</isActive>
                <label>Commercial Lighting</label>
            </value>
            <value>
                <fullName>Consultancy / Other</fullName>
                <isActive>false</isActive>
                <label>Consultancy / Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>