force-app/main/default/objects/Lead/fields/Initial_Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Proposal_Date__c</fullName>
    <label>Initial Proposal Date</label>
    <type>Date</type>
</CustomField>