force-app/main/default/objects/Lead/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <label>Post Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Postal_Code</valueSetName>
    </valueSet>
</CustomField>