force-app/main/default/objects/Lead/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Battery Storage</fullName>
                <isActive>false</isActive>
                <label>Battery Storage</label>
            </value>
            <value>
                <fullName>Commercial Lighting</fullName>
                <isActive>false</isActive>
                <label>Commercial Lighting</label>
            </value>
            <value>
                <fullName>Consultancy / Other</fullName>
                <isActive>false</isActive>
                <label>Consultancy / Other</label>
            </value>
            <value>
                <fullName>EV Charging</fullName>
                <isActive>false</isActive>
                <label>EV Charging</label>
            </value>
            <value>
                <fullName>Electrical</fullName>
                <isActive>false</isActive>
                <label>Electrical</label>
            </value>
            <value>
                <fullName>Solar - Commercial</fullName>
                <isActive>false</isActive>
                <label>Solar - Commercial</label>
            </value>
            <value>
                <fullName>Solar - Residential</fullName>
                <isActive>false</isActive>
                <label>Solar - Residential</label>
            </value>
            <value>
                <fullName>SolarCommercial</fullName>
                <isActive>false</isActive>
                <label>SolarCommercial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>