force-app/main/default/objects/Lead/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Post_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>Midlands</fullName>
            </value>
            <value>
                <fullName>East Anglia</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>Northern Ireland</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>