force-app/main/default/objects/Lead/fields/Site_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_City__c</fullName>
    <label>Site Address (City)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>