force-app/main/default/objects/Lead/fields/Site_Address_Country_Territory__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_Country_Territory__c</fullName>
    <label>Site Address (Country/Territory)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>