force-app/main/default/objects/Lead/fields/Site_post_code__c.field-meta.xml
<CustomField>
    <fullName>Site_post_code__c</fullName>
    <label>Site post code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KW</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>PH</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>FK</fullName>
            </value>
            <value>
                <fullName>KY</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>EH</fullName>
            </value>
            <value>
                <fullName>KA</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>TD</fullName>
            </value>
            <value>
                <fullName>DG</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>DH</fullName>
            </value>
            <value>
                <fullName>SR</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>DL</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>HG</fullName>
            </value>
            <value>
                <fullName>YO</fullName>
            </value>
            <value>
                <fullName>HX</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>HD</fullName>
            </value>
            <value>
                <fullName>WF</fullName>
            </value>
            <value>
                <fullName>HU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>