force-app/main/default/objects/Lead/fields/Uploaded_Energy_bills__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Energy_bills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uploaded Energy bills</label>
    <type>Checkbox</type>
</CustomField>