force-app/main/default/objects/Lead/validationRules/Brochure_Sending_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Brochure_Sending_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISPICKVAL(Status,&quot;Estimate Sent&quot;),
ISPICKVAL(Status,&quot;Converted&quot;),ISPICKVAL(Status,&quot;Closed - Not Converted&quot;)) &amp;&amp; Brochure_Send_Successfully__c = false</errorConditionFormula>
    <errorMessage>Before proceeding to the next status, make sure to choose a brochure and then click the &quot;Send Brochures&quot; button.</errorMessage>
</ValidationRule>