force-app/main/default/objects/Lead/validationRules/Mobile_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Validation_Rule</fullName>
    <active>true</active>
    <description>Mobile number must contain only numeric characters</description>
    <errorConditionFormula>NOT(ISBLANK(MobilePhone)) &amp;&amp; NOT(REGEX(MobilePhone, &apos;^[0-9]{10}$&apos;))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please provide a valid mobile number.</errorMessage>
</ValidationRule>