force-app/main/default/objects/Lead/validationRules/MPAN_Validation_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>MPAN_Validation_Rules</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( MPAN1__c )),
  NOT(ISNUMBER(MPAN1__c)),
  LEN(MPAN1__c) &lt;&gt; 12
)</errorConditionFormula>
    <errorMessage>Please enter a valid MPAN for the meter.</errorMessage>
</ValidationRule>