force-app/main/default/objects/Lead/validationRules/Phone_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation_Rule</fullName>
    <active>true</active>
    <description>Mobile number must contain only numeric characters</description>
    <errorConditionFormula>NOT(ISBLANK( Phone )) &amp;&amp; NOT(REGEX( Phone , &apos;^[0-9]{10}$&apos;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please provide a valid phone number.</errorMessage>
</ValidationRule>