force-app/main/default/objects/Lead/listViews/Bright_Spark_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Bright_Spark_Queue_Lead</fullName>
    <columns>Identity_Type__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Bright Spark Queue</label>
    <queue>Bright_Spark_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>