force-app/main/default/objects/Lead/listViews/South_East.listView-meta.xml
<ListView>
    <fullName>South_East</fullName>
    <columns>Identity_Type__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>South East</value>
    </filters>
    <label>South East</label>
</ListView>