force-app/main/default/objects/Lead/listViews/TodaysLeads.listView-meta.xml
<ListView>
    <fullName>TodaysLeads</fullName>
    <columns>Identity_Type__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Leads</label>
</ListView>